--- a/src/view/index.html
+++ b/src/view/index.html
@@ -8,6 +8,14 @@
     />
     <meta name="theme-color" content="#000000" />
     <title>Stock-A-Roo</title>
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
   </head>
   <body>
     <noscript>
